Rebrand to Shape Seeds, update navigation, and add full career case studies

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About — Wojciech Hupert</title>
+    <title>About — Shape Seeds</title>
     <meta name="description"
         content="Senior product designer with 15+ years experience across fintech, Web3, and SaaS. Based in Berlin." />
     <link rel="stylesheet" href="style.css" />
@@ -15,10 +15,11 @@
     <!-- ── Navigation ──────────────────────────────────────── -->
     <nav class="nav">
         <div class="nav__inner">
-            <a href="index.html" class="nav__logo">W<span>.</span>Hupert</a>
+            <a href="index.html" class="nav__logo">Shape<span>.</span>Seeds</a>
             <ul class="nav__links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Approach</a></li>
                 <li><a href="portfolio.html">Work</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html" class="nav__cta">Contact</a></li>
             </ul>
@@ -27,8 +28,9 @@
             </button>
         </div>
         <div class="nav__mobile" id="navMobile">
-            <a href="index.html">Home</a>
+            <a href="index.html">Approach</a>
             <a href="portfolio.html">Work</a>
+            <a href="services.html">Services</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -65,25 +67,21 @@
                             systems &amp; emerging technology.</h1>
 
                         <p>
-                            Senior product designer with 15+ years building digital products across fintech, Web3,
-                            media,
-                            and SaaS platforms. Specialised in modernising legacy design systems and creating scalable,
-                            user-centred interfaces for complex technical products.
+                            Senior product designer with over 15 years of experience building digital products across
+                            fintech, Web3,
+                            media, and SaaS platforms. Based in Berlin, I specialize in design systems architecture,
+                            product design for complex technical products, and AI-enhanced design workflows.
                         </p>
                         <p style="margin-top:16px;">
-                            Track record of improving user engagement, reducing friction in critical workflows, and
-                            delivering
-                            designs that meet both business objectives and technical constraints. I thrive in
-                            collaborative
-                            environments where I can balance strategic thinking with hands-on execution, iterate quickly
-                            with
-                            cross-functional teams, and create both functional and visually compelling solutions.
+                            My track record involves leading the evolution of complex products like Podigee and
+                            Wealth Management SaaS at FNZ, reducing user friction in critical workflows and
+                            modernizing legacy systems. I thrive in bridging the gap between technical complexity
+                            and human-centered value.
                         </p>
                         <p style="margin-top:16px;">
-                            Particularly interested in organisations exploring how AI can transform their product
-                            experience.
-                            Seeking senior product design roles at established companies building meaningful, enduring
-                            products.
+                            I am particularly focused on the strategic integration of AI into product experiences,
+                            ensuring that agentic workflows are not just functional but deliver high retention and
+                            a premium brand feel.
                         </p>
 
                         <div class="info-list">
@@ -97,7 +95,7 @@
                             </div>
                             <div class="info-item">
                                 <strong>Languages</strong>
-                                <span>English (fluent), Polish (native), German (elementary)</span>
+                                <span>English (Fluent), Polish (Native), German (Elementary)</span>
                             </div>
                             <div class="info-item">
                                 <strong>CV</strong>
@@ -105,25 +103,23 @@
                                     <a href="https://drive.google.com/file/d/1hgTfhdnDlO6U3McUXUWfzer0JmPOmrfy/view"
                                         target="_blank" rel="noopener"
                                         style="color:var(--color-accent);font-weight:600;">
-                                        Download PDF ↓
+                                        View CV (Google Drive) ↓
                                     </a>
                                 </span>
                             </div>
                         </div>
 
                         <div class="skills-grid" style="margin-top:40px;">
-                            <span class="skill-chip">Design Systems</span>
-                            <span class="skill-chip">Product Design</span>
-                            <span class="skill-chip">User Research</span>
-                            <span class="skill-chip">Usability Testing</span>
+                            <span class="skill-chip">Design Systems Architecture</span>
+                            <span class="skill-chip">Product Design for SaaS</span>
+                            <span class="skill-chip">AI-Enhanced Design Workflows</span>
+                            <span class="skill-chip">User Research & Usability Testing</span>
                             <span class="skill-chip">Rapid Prototyping</span>
                             <span class="skill-chip">Figma</span>
-                            <span class="skill-chip">AI-Enhanced Workflows</span>
-                            <span class="skill-chip">Information Architecture</span>
-                            <span class="skill-chip">Cross-functional Collaboration</span>
-                            <span class="skill-chip">HTML &amp; CSS</span>
-                            <span class="skill-chip">Component-based Design</span>
-                            <span class="skill-chip">Interaction Design</span>
+                            <span class="skill-chip">HTML, CSS & JS</span>
+                            <span class="skill-chip">Web3 & Blockchain UX</span>
+                            <span class="skill-chip">Monetization Workflow UX</span>
+                            <span class="skill-chip">Analytics & Data Viz</span>
                         </div>
 
                     </div>
@@ -147,14 +143,13 @@
                         <div style="font-size:0.85rem;color:var(--color-text-muted);padding-top:4px;">Nov 2023 — Present
                         </div>
                         <div>
-                            <h3 style="margin-bottom:4px;">Product Designer</h3>
+                            <h3 style="margin-bottom:4px;">Senior Product Designer</h3>
                             <p style="font-size:0.9rem;color:var(--color-accent);font-weight:600;margin-bottom:8px;">
                                 Podigee · Berlin, Germany</p>
-                            <p style="font-size:0.9rem;">Led a 10-month redesign of the entire design system (80+
-                                reusable components). Designed and launched AI-powered "SEO Insights" features for
-                                content quality analysis. Improved user engagement by retiring underperforming features
-                                and reducing visual noise. Transformed the platform into a modern industry leader,
-                                improving both user satisfaction and development velocity.</p>
+                            <p style="font-size:0.9rem;">Modernizing the product experience for a leading podcast
+                                hosting and analytics platform. Leading the evolution of the Podigee design system for
+                                scalability, optimizing monetization workflows, and integrating AI-driven content
+                                features.</p>
                         </div>
                     </div>
 
@@ -163,12 +158,26 @@
                             2023</div>
                         <div>
                             <h3 style="margin-bottom:4px;">User Experience Designer</h3>
-                            <p style="font-size:0.9rem;color:var(--color-accent);font-weight:600;margin-bottom:8px;">FNZ
-                                Group · Berlin, Germany</p>
-                            <p style="font-size:0.9rem;">Designed core wealth management modules for a global platform
-                                used by major financial institutions — making complex financial workflows accessible.
-                                Collaborated with BAs and developers to ensure technical feasibility and business
-                                alignment. Facilitated design thinking workshops for new feature releases.</p>
+                            <p style="font-size:0.9rem;color:var(--color-accent);font-weight:600;margin-bottom:8px;">
+                                FNZ Group · Dublin / Remote</p>
+                            <p style="font-size:0.9rem;">Designed core wealth management modules for a global SaaS
+                                platform. Led the redesign of the electronic identity verification (ID&V) experience,
+                                drastically reducing compliance friction and user drop-off across global banking
+                                institutions.</p>
+                        </div>
+                    </div>
+
+                    <div class="reveal" style="display:grid;grid-template-columns:160px 1fr;gap:32px;">
+                        <div style="font-size:0.85rem;color:var(--color-text-muted);padding-top:4px;">July 2015 — May
+                            2018</div>
+                        <div>
+                            <h3 style="margin-bottom:4px;">UX/UI Designer</h3>
+                            <p style="font-size:0.9rem;color:var(--color-accent);font-weight:600;margin-bottom:8px;">
+                                scribe / BigchainDB / Ocean Protocol / IPDB · Berlin, Germany</p>
+                            <p style="font-size:0.9rem;">Early team member for pioneering blockchain and Web3 projects.
+                                Simplified decentralized data marketplaces and digital ownership concepts through
+                                intuitive UI. Built comprehensive brand guidelines and design systems for multiple
+                                scaling organizations.</p>
                         </div>
                     </div>
 
@@ -179,23 +188,9 @@
                             <h3 style="margin-bottom:4px;">UX/UI Design Mentor</h3>
                             <p style="font-size:0.9rem;color:var(--color-accent);font-weight:600;margin-bottom:8px;">
                                 CareerFoundry · Remote</p>
-                            <p style="font-size:0.9rem;">Mentored career-transition students through UX/UI bootcamps via
-                                one-on-one sessions. Guided students in building professional portfolios and bridged the
-                                gap between academia and industry.</p>
-                        </div>
-                    </div>
-
-                    <div class="reveal" style="display:grid;grid-template-columns:160px 1fr;gap:32px;">
-                        <div style="font-size:0.85rem;color:var(--color-text-muted);padding-top:4px;">July 2015 — May
-                            2018</div>
-                        <div>
-                            <h3 style="margin-bottom:4px;">UX/UI Designer</h3>
-                            <p style="font-size:0.9rem;color:var(--color-accent);font-weight:600;margin-bottom:8px;">
-                                ascribe / BigchainDB / Ocean Protocol · Berlin, Germany</p>
-                            <p style="font-size:0.9rem;">Early team member building Web3 infrastructure. Designed UX for
-                                early NFT and decentralised data marketplaces. Simplified complex technical concepts
-                                (private keys, transaction signing) for non-technical users. Managed visual brand
-                                identity for multiple interconnected organisations.</p>
+                            <p style="font-size:0.9rem;">Mentored global students through a career-transition design
+                                bootcamp, guiding them in building professional portfolios and transitioning into the
+                                design industry.</p>
                         </div>
                     </div>
 
@@ -206,20 +201,21 @@
                             <h3 style="margin-bottom:4px;">UX/UI Designer</h3>
                             <p style="font-size:0.9rem;color:var(--color-accent);font-weight:600;margin-bottom:8px;">
                                 Jobspotting · Berlin, Germany</p>
-                            <p style="font-size:0.9rem;">Designed two major iterations of the web application. Created
-                                the company's first comprehensive visual style guide and design system. Conducted user
-                                testing to validate design decisions.</p>
+                            <p style="font-size:0.9rem;">Iterated on web application interfaces and created the
+                                company’s first comprehensive visual style guide and design system for a personalized
+                                job search engine.</p>
                         </div>
                     </div>
 
                     <div class="reveal" style="display:grid;grid-template-columns:160px 1fr;gap:32px;">
-                        <div style="font-size:0.85rem;color:var(--color-text-muted);padding-top:4px;">2006 — 2023</div>
+                        <div style="font-size:0.85rem;color:var(--color-text-muted);padding-top:4px;">2005 — 2013</div>
                         <div>
-                            <h3 style="margin-bottom:4px;">Freelance Designer</h3>
+                            <h3 style="margin-bottom:4px;">DTP Manager & Graphic Designer</h3>
                             <p style="font-size:0.9rem;color:var(--color-accent);font-weight:600;margin-bottom:8px;">
-                                Independent</p>
-                            <p style="font-size:0.9rem;">Provided UX/UI, branding, and print design services for diverse
-                                clients across Europe over 17 years.</p>
+                                Various Agencies · Dublin / Madrid</p>
+                            <p style="font-size:0.9rem;">Early career foundation in publishing and graphic design. Led
+                                DTP and design teams at Messenger Publications, Tek Translations, Eurotext, and ICON
+                                Clinical Research.</p>
                         </div>
                     </div>
 
@@ -237,7 +233,7 @@
                             <h3 style="margin-bottom:4px;">Higher National Diploma, Commercial &amp; Advertising Art
                             </h3>
                             <p style="font-size:0.9rem;color:var(--color-accent);font-weight:600;">Policealne Studium
-                                Reklamy, Poland</p>
+                                Reklamy · Katowice, Poland</p>
                         </div>
                     </div>
                 </div>
@@ -266,13 +262,14 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
-                <span class="footer__logo">W<span>.</span>Hupert</span>
+                <span class="footer__logo">Shape<span>.</span>Seeds</span>
                 <nav class="footer__links">
                     <a href="portfolio.html">Work</a>
+                    <a href="services.html">Services</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
                 </nav>
-                <p class="footer__copy">© 2026 Wojciech Hupert. All rights reserved.</p>
+                <p class="footer__copy">© 2026 Shape Seeds. All rights reserved.</p>
             </div>
         </div>
     </footer>
