--- a/case-study-1.html
+++ b/case-study-1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Podigee Platform Redesign — Wojciech Hupert</title>
+    <title>Podigee Platform Redesign — Shape Seeds</title>
     <meta name="description"
         content="UX case study: Podigee Platform Redesign — modernising a decade-old podcast hosting platform with a new design system and AI-powered features." />
     <link rel="stylesheet" href="style.css" />
@@ -15,10 +15,11 @@
     <!-- ── Navigation ──────────────────────────────────────── -->
     <nav class="nav">
         <div class="nav__inner">
-            <a href="index.html" class="nav__logo">W<span>.</span>Hupert</a>
+            <a href="index.html" class="nav__logo">Shape<span>.</span>Seeds</a>
             <ul class="nav__links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Approach</a></li>
                 <li><a href="portfolio.html">Work</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html" class="nav__cta">Contact</a></li>
             </ul>
@@ -27,8 +28,9 @@
             </button>
         </div>
         <div class="nav__mobile" id="navMobile">
-            <a href="index.html">Home</a>
+            <a href="index.html">Approach</a>
             <a href="portfolio.html">Work</a>
+            <a href="services.html">Services</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -62,7 +64,7 @@
                 <div class="case-stats">
                     <div>
                         <div class="case-stat__label">My Role</div>
-                        <div class="case-stat__value">Product Designer</div>
+                        <div class="case-stat__value">Senior Product Designer</div>
                     </div>
                     <div>
                         <div class="case-stat__label">Company</div>
@@ -70,7 +72,7 @@
                     </div>
                     <div>
                         <div class="case-stat__label">Duration</div>
-                        <div class="case-stat__value">10 Months</div>
+                        <div class="case-stat__value">15 Months (Ongoing)</div>
                     </div>
                     <div>
                         <div class="case-stat__label">Period</div>
@@ -254,13 +256,14 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
-                <span class="footer__logo">W<span>.</span>Hupert</span>
+                <span class="footer__logo">Shape<span>.</span>Seeds</span>
                 <nav class="footer__links">
                     <a href="portfolio.html">Work</a>
+                    <a href="services.html">Services</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
                 </nav>
-                <p class="footer__copy">© 2026 Wojciech Hupert. All rights reserved.</p>
+                <p class="footer__copy">© 2026 Shape Seeds. All rights reserved.</p>
             </div>
         </div>
     </footer>
