--- a/case-study-2.html
+++ b/case-study-2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FNZ Wealth Management Platform — Wojciech Hupert</title>
+    <title>FNZ Wealth Management Platform — Shape Seeds</title>
     <meta name="description"
         content="UX case study: FNZ Wealth Management Platform — designing complex financial workflows for a global fintech enterprise platform." />
     <link rel="stylesheet" href="style.css" />
@@ -15,10 +15,11 @@
     <!-- ── Navigation ──────────────────────────────────────── -->
     <nav class="nav">
         <div class="nav__inner">
-            <a href="index.html" class="nav__logo">W<span>.</span>Hupert</a>
+            <a href="index.html" class="nav__logo">Shape<span>.</span>Seeds</a>
             <ul class="nav__links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Approach</a></li>
                 <li><a href="portfolio.html">Work</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html" class="nav__cta">Contact</a></li>
             </ul>
@@ -27,8 +28,9 @@
             </button>
         </div>
         <div class="nav__mobile" id="navMobile">
-            <a href="index.html">Home</a>
+            <a href="index.html">Approach</a>
             <a href="portfolio.html">Work</a>
+            <a href="services.html">Services</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -63,15 +65,15 @@
                 <div class="case-stats">
                     <div>
                         <div class="case-stat__label">My Role</div>
-                        <div class="case-stat__value">UX Designer</div>
+                        <div class="case-stat__value">User Experience Designer</div>
                     </div>
                     <div>
                         <div class="case-stat__label">Company</div>
-                        <div class="case-stat__value">FNZ Group, Berlin</div>
+                        <div class="case-stat__value">FNZ Group, Dublin</div>
                     </div>
                     <div>
                         <div class="case-stat__label">Duration</div>
-                        <div class="case-stat__value">10 Months</div>
+                        <div class="case-stat__value">11 Months</div>
                     </div>
                     <div>
                         <div class="case-stat__label">Period</div>
@@ -214,7 +216,7 @@
             <div class="container"
                 style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:16px;">
                 <a href="case-study-1.html" class="btn btn--outline">← Previous Case Study</a>
-                <a href="portfolio.html" class="btn btn--primary">All Projects →</a>
+                <a href="case-study-3.html" class="btn btn--primary">Next Case Study →</a>
             </div>
         </div>
 
@@ -224,13 +226,14 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
-                <span class="footer__logo">W<span>.</span>Hupert</span>
+                <span class="footer__logo">Shape<span>.</span>Seeds</span>
                 <nav class="footer__links">
                     <a href="portfolio.html">Work</a>
+                    <a href="services.html">Services</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
                 </nav>
-                <p class="footer__copy">© 2026 Wojciech Hupert. All rights reserved.</p>
+                <p class="footer__copy">© 2026 Shape Seeds. All rights reserved.</p>
             </div>
         </div>
     </footer>
