--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact — Wojciech Hupert</title>
+    <title>Contact — Shape Seeds</title>
     <meta name="description"
-        content="Get in touch with Wojciech Hupert for product design projects, collaborations, or senior design roles." />
+        content="Get in touch with Shape Seeds for product design projects, collaborations, or senior design roles." />
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -15,10 +15,11 @@
     <!-- ── Navigation ──────────────────────────────────────── -->
     <nav class="nav">
         <div class="nav__inner">
-            <a href="index.html" class="nav__logo">W<span>.</span>Hupert</a>
+            <a href="index.html" class="nav__logo">Shape<span>.</span>Seeds</a>
             <ul class="nav__links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Approach</a></li>
                 <li><a href="portfolio.html">Work</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html" class="nav__cta">Contact</a></li>
             </ul>
@@ -27,8 +28,9 @@
             </button>
         </div>
         <div class="nav__mobile" id="navMobile">
-            <a href="index.html">Home</a>
+            <a href="index.html">Approach</a>
             <a href="portfolio.html">Work</a>
+            <a href="services.html">Services</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -181,13 +183,14 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
-                <span class="footer__logo">W<span>.</span>Hupert</span>
+                <span class="footer__logo">Shape<span>.</span>Seeds</span>
                 <nav class="footer__links">
                     <a href="portfolio.html">Work</a>
+                    <a href="services.html">Services</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
                 </nav>
-                <p class="footer__copy">© 2026 Wojciech Hupert. All rights reserved.</p>
+                <p class="footer__copy">© 2026 Shape Seeds. All rights reserved.</p>
             </div>
         </div>
     </footer>
